added moving platforms

--- a/test.html
+++ b/test.html
@@ -52,6 +52,7 @@
 <script src="src/math/brick_grid.js"></script>
 <script src="src/math/ball.js"></script>
 <script src="src/math/barrier.js"></script>
+<script src="src/math/moving_barrier.js"></script>
 <script src="src/math/vector.js"></script>
 <script src="src/math/util.js"></script>
 <script src="src/math/rng.js"></script>
