cleanup, added presets

--- a/test.html
+++ b/test.html
@@ -60,6 +60,7 @@
 <script src="src/draw.js"></script>
 <script src="src/mouse.js"></script>
 <script src="src/update.js"></script>
+<script src="src/presets.js"></script>
 <script src="src/setup.js"></script>
       
       
